Closed Bug 784704 Opened 12 years ago Closed 12 years ago

GetViewportInfo does not read minimum-scale and maximum-scale correctly

Categories

(Core :: Layout: Text and Fonts, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: mbrubeck, Assigned: mbrubeck)

References

Details

Attachments

(1 file)

Attached patch patchSplinter Review
Simple mistake: we used the wrong atoms in GetViewportInfo, so it doesn't actually read the header values that are set in ProcessViewportInfo.

I'll have tests for this soon, but they depend on other patches in bug 716575.
Attachment #654237 - Flags: review?(sjohnson)
Attachment #654237 - Flags: review?(sjohnson) → review+
https://hg.mozilla.org/mozilla-central/rev/0cd39066334d
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: