Bug 784704 - GetViewportInfo does not read minimum-scale and maximum-scale [r=jwir3]

--HG--
extra : rebase_source : 7a425fab37b6e5ced66c8a33f1258129b399e4ff